<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">SolveNGo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="diversity">Diversity</string>
    <string name="slogan">We are lovely pandas.</string>
    <string name="title_activity_settings">Settings</string>
    
    <string name="no_internet_connection">No internet connection.</string>
    
    <!-- Jennifer's resources (try1) -->
    <style name="BiggerFont">
        <item name="android:textSize">30sp</item>
   </style>
    <string name="puzzle_view_name">Puzzle</string>
    <string name="anagram_view_name">Anagram</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Submit</string>
    <string name="main_menu">Main Menu</string>
    <string name="about">About</string>
    
    <string name="gps_view_name">Map</string>
    <string name="submit">Submit</string>
    
    <string name="start_continue">Start/Continue</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="trophies">Trophy Shelf</string>
    <string name="trophies_view_name">Trophy Room</string>
    <string name="photos">Photo Album</string>
    <string name="help">Help</string>

    <string name="photos_view_name">Your Collected Characters</string>
    
    <string name="randomize">Randomize</string>
    <string name="claim_materials">Claim Materials</string>
    <string name="locate_materials">Locate Materials</string>
    
    <string name="no_solved_materials">No solved materials. Go solve some puzzles =)</string>
    <string name="no_nearby_materials">There are no materials near you. Go find one!</string>
    <string name="no_located_materials">No materials have been located; you need to locate them first.</string>

    <string name="inventory">Inventory</string>
    <string name="inventory_view_name">Your Collected Materials</string>
    <string name="restart">Restart</string>
    <string name="puz_desc">Puzzle</string>
    <string name="okay">Okay</string>
    <string name="no_more_puzzles">You have solved all puzzles for your current item, click map to return to map view.</string>
    
    <string name="choose_a_character">Choose a Character</string>
    
    <string name="synopsis">Welcome to <i>Solve N Go</i>! Be prepared to collect awesome items, explore your city, and build a family!\n</string>
    
	<string name="dialog_yes">Yes</string>
	<string name="dialog_no">No</string>
	<string name="character_dialog_surfer">Hey dude, I am Sunny de Souza. I am from the big island, surfing the waves since I was a tiny dude. I rode this crazy wave that scatterd all the beachgoers\' belongings all over the place. Help the dudes and dudets out.</string>
	<string name="character_dialog_grandma">Oh hello, deary. Are you hungry? I would bake you some fresh cookies, but I think my cats hid all the groceries that I just got from the store. Oh dear, where did I put the sweater I knit you? Can you help me out, deary?</string>
	<string name="character_dialog_mayor">Hi, I am the mayor of Mountain View. I need some help for my city! Can you help me collect some items?</string>
	
	<string name="developers"><b>Developers</b>\nCarolyn Chen\nStephanie New\nAshley Thomas\nJennifer Wu\n Ksenia Bukina\n</string>
	<string name="artwork"><b>Artwork</b>\nCarolyn Chen\nJamie Forbes\n</string>
	<string name="team_lead"><b>Team Lead</b>\nKsenia Bukina\n</string>
	
	<string name="help_steps">How to play:\nFirst solve some puzzles.\nNext, you will be given a material that you need to collect.\nLocate the materials, and then go to their locations and then claim them.\nFive materials make an item, and if you collect enough items, you will complete a character. Get solving!</string>
	
	<color name="red">#590000</color>

</resources>
