<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blankbackground"
    android:weightSum="5.0" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/main_menu_pick_character"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/home_button_custom" />

        <TextView
            style="@style/GameFont.Big"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_weight="1.40"
            android:gravity="center"
            android:text="@string/about" />

        <TextView
            style="@style/GameFont"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/synopsis" />

        <TextView
            style="@style/GameFont"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/developers" />

        <TextView
            style="@style/GameFont"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/artwork" />

        <TextView
            style="@style/GameFont"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/team_lead" />
    </LinearLayout>

</ScrollView>
