<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:gravity="center"
    tools:context=".SignUpOrLogInActivity" 
    android:background="@drawable/background"
    android:orientation="vertical">
    
    <TextView
        android:id="@+id/textView3"
        style="@style/GameFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/slogan" />
    

    <Button
        android:id="@+id/logInButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_textbutton_custom" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:background="@drawable/sign_up_textbutton_custom" />

    <TextView
        android:id="@+id/textView1"
        style="@style/GameFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/powered_by" />

    <TextView
        android:id="@+id/textView2"
        style="@style/GameFont.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/diversity" />

    
</LinearLayout>

<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpOrLogInActivity" 
    android:background="@drawable/background"
    android:gravity="center">

    <Button
        android:id="@+id/logInButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textView3"
        android:background="@drawable/login_textbutton" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_below="@id/logInButton"
        android:background="@drawable/sign_up_textbutton"/>

    <TextView
        android:id="@+id/textView1"
        style="@style/GameFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/powered_by" />

    <TextView
        android:id="@+id/textView2"
        style="@style/GameFont.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/diversity" />

    <TextView
        android:id="@+id/textView3"
        style="@style/GameFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginTop="60dp"
        android:text="@string/slogan" />

</RelativeLayout> -->